final changes on large layout

--- a/index.html
+++ b/index.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Zen style guide</title>
+    <title>CSS Zen Garden: The Beauty of CSS Design</title>
     <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="page-wrapper">
-      <section class="intro" id="zen-intro">
-        <header role="banner">
-          <h1>CSS Zen Garden</h1>
-          <h2>
-            The Beauty of <abbr title="Cascading Style Sheets">CSS</abbr> Design
-          </h2>
-        </header>
+</head>
 
-        <div class="summary" id="zen-summary" role="article">
-          <p>
-            A demonstration of what can be accomplished through
-            <abbr title="Cascading Style Sheets">CSS</abbr>-based design. Select
-            any style sheet from the list to load it into this page.
-          </p>
-          <p>
-            Download the example
-            <a
-              href="/examples/index"
-              title="This page's source HTML code, not to be modified."
-              >html file</a
+<body>
+    <div class="page-wrapper">
+        <section class="intro" id="zen-intro">
+            <header role="banner">
+                <h1>CSS Zen Garden</h1>
+                <h2>
+                    The Beauty of <abbr title="Cascading Style Sheets">CSS</abbr> Design
+                </h2>
+            </header>
+
+            <div class="summary" id="zen-summary" role="article">
+                <p>
+                    A demonstration of what can be accomplished through
+                    <abbr title="Cascading Style Sheets">CSS</abbr>-based design. Select any style sheet from the list to load it into this page.
+                </p>
+                <p>
+                    Download the example
+                    <a href="/examples/index" title="This page's source HTML code, not to be modified.">html file</a
             >
             and
             <a
@@ -204,13 +202,9 @@
             so that others may learn from your work.
           </p>
           <p role="contentinfo">
-            By <a href="http://www.mezzoblue.com/">Dave Shea</a>. Bandwidth
-            graciously donated by
-            <a href="http://www.mediatemple.net/">mediatemple</a>. Now
-            available:
-            <a
-              href="http://www.amazon.com/exec/obidos/ASIN/0321303474/mezzoblue-20/"
-              >Zen Garden, the book</a
+            By <a href="http://www.mezzoblue.com/">Dave Shea</a>. Bandwidth graciously donated by
+                    <a href="http://www.mediatemple.net/">mediatemple</a>. Now available:
+                    <a href="http://www.amazon.com/exec/obidos/ASIN/0321303474/mezzoblue-20/">Zen Garden, the book</a
             >.
           </p>
         </div>
@@ -257,50 +251,42 @@
               <ul>
                 <li>
                   <a href="/221/" class="design-name">Mid Century Modern</a> by
-                  <a href="http://andrewlohman.com/" class="designer-name"
-                    >Andrew Lohman</a
+                    <a href="http://andrewlohman.com/" class="designer-name">Andrew Lohman</a
                   >
                 </li>
                 <li>
                   <a href="/220/" class="design-name">Garments</a> by
-                  <a href="http://danielmall.com/" class="designer-name"
-                    >Dan Mall</a
+                    <a href="http://danielmall.com/" class="designer-name">Dan Mall</a
                   >
                 </li>
                 <li>
                   <a href="/219/" class="design-name">Steel</a> by
-                  <a href="http://steffen-knoeller.de" class="designer-name"
-                    >Steffen Knoeller</a
+                    <a href="http://steffen-knoeller.de" class="designer-name">Steffen Knoeller</a
                   >
                 </li>
                 <li>
                   <a href="/218/" class="design-name">Apothecary</a> by
-                  <a href="http://trentwalton.com" class="designer-name"
-                    >Trent Walton</a
+                    <a href="http://trentwalton.com" class="designer-name">Trent Walton</a
                   >
                 </li>
                 <li>
                   <a href="/217/" class="design-name">Screen Filler</a> by
-                  <a href="http://elliotjaystocks.com/" class="designer-name"
-                    >Elliot Jay Stocks</a
+                    <a href="http://elliotjaystocks.com/" class="designer-name">Elliot Jay Stocks</a
                   >
                 </li>
                 <li>
                   <a href="/216/" class="design-name">Fountain Kiss</a> by
-                  <a href="http://jeremycarlson.com" class="designer-name"
-                    >Jeremy Carlson</a
+                    <a href="http://jeremycarlson.com" class="designer-name">Jeremy Carlson</a
                   >
                 </li>
                 <li>
                   <a href="/215/" class="design-name">A Robot Named Jimmy</a> by
-                  <a href="http://meltmedia.com/" class="designer-name"
-                    >meltmedia</a
+                    <a href="http://meltmedia.com/" class="designer-name">meltmedia</a
                   >
                 </li>
                 <li>
                   <a href="/214/" class="design-name">Verde Moderna</a> by
-                  <a href="http://www.mezzoblue.com/" class="designer-name"
-                    >Dave Shea</a
+                    <a href="http://www.mezzoblue.com/" class="designer-name">Dave Shea</a
                   >
                 </li>
               </ul>
@@ -315,67 +301,50 @@
                   <a href="/214/page1">
                     Next Designs <span class="indicator">&rsaquo;</span>
                   </a>
-                </li>
-                <li class="viewall">
-                  <a
-                    href="http://www.mezzoblue.com/zengarden/alldesigns/"
-                    title="View every submission to the Zen Garden."
-                  >
+                    </li>
+                    <li class="viewall">
+                        <a href="http://www.mezzoblue.com/zengarden/alldesigns/" title="View every submission to the Zen Garden.">
                     View All Designs
                   </a>
-                </li>
-              </ul>
-            </nav>
-          </div>
+                    </li>
+                    </ul>
+                    </nav>
+            </div>
 
-          <div class="zen-resources" id="zen-resources">
-            <h3 class="resources">Resources:</h3>
-            <ul>
-              <li class="view-css">
-                <a
-                  href="style.css"
-                  title="View the source CSS file of the currently-viewed design."
-                >
+            <div class="zen-resources" id="zen-resources">
+                <h3 class="resources">Resources:</h3>
+                <ul>
+                    <li class="view-css">
+                        <a href="style.css" title="View the source CSS file of the currently-viewed design.">
                   View This Design&#8217;s
                   <abbr title="Cascading Style Sheets">CSS</abbr>
                 </a>
-              </li>
-              <li class="css-resources">
-                <a
-                  href="http://www.mezzoblue.com/zengarden/resources/"
-                  title="Links to great sites with information on using CSS."
-                >
-                  <abbr title="Cascading Style Sheets">CSS</abbr> Resources
-                </a>
-              </li>
-              <li class="zen-faq">
-                <a
-                  href="http://www.mezzoblue.com/zengarden/faq/"
-                  title="A list of Frequently Asked Questions about the Zen Garden."
-                >
-                  <abbr title="Frequently Asked Questions">FAQ</abbr>
-                </a>
-              </li>
-              <li class="zen-submit">
-                <a
-                  href="http://www.mezzoblue.com/zengarden/submit/"
-                  title="Send in your own CSS file."
-                >
+                    </li>
+                    <li class="css-resources">
+                        <a href="http://www.mezzoblue.com/zengarden/resources/" title="Links to great sites with information on using CSS.">
+                            <abbr title="Cascading Style Sheets">CSS</abbr> Resources
+                        </a>
+                    </li>
+                    <li class="zen-faq">
+                        <a href="http://www.mezzoblue.com/zengarden/faq/" title="A list of Frequently Asked Questions about the Zen Garden.">
+                            <abbr title="Frequently Asked Questions">FAQ</abbr>
+                        </a>
+                    </li>
+                    <li class="zen-submit">
+                        <a href="http://www.mezzoblue.com/zengarden/submit/" title="Send in your own CSS file.">
                   Submit a Design
                 </a>
-              </li>
-              <li class="zen-translations">
-                <a
-                  href="http://www.mezzoblue.com/zengarden/translations/"
-                  title="View translated versions of this page."
-                >
+                    </li>
+                    <li class="zen-translations">
+                        <a href="http://www.mezzoblue.com/zengarden/translations/" title="View translated versions of this page.">
                   Translations
                 </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </aside>
+                    </li>
+                </ul>
+            </div>
     </div>
-  </body>
+    </aside>
+    </div>
+</body>
+
 </html>
